# algorithms

./: .gitignore
Trabalho 02/: CMakeLists.txt  README.md  main  main.cpp  questao1.cpp  questao12.cpp  questao14.cpp  questao4.cpp  questao7.cpp  questao8.cpp
binary-search-tree/binarySearchTree/src/tree/: BinaryTree.java  MainBinaryTree.java
hash-table/: .gitignore  CMakeLists.txt  README.md
hash-table/include/: account.h  hashtbl.h
hash-table/src/: account.cpp  driver_ht.cpp  teste  teste.cpp
hash-table/test/: run_tests.cpp
linked-list/: CMakeLists.txt  README.md
linked-list/include/: const_iterator.h  iterator.h  list.h  node.h
linked-list/lib/: test_manager.h
linked-list/src/: driver_search.cpp
linked-list/test/: guia.cpp  run_tests.cpp
searching-exercise/: CMakeLists.txt  README.md  Relatório.docx  config  ~$latório.docx  ~WRL0794.tmp
searching-exercise/include/: searching.h
searching-exercise/pics/: bSearchIterative.txt  bSearchRecursive.txt  bSearchlinear.txt  linearsearch  linhas.gnu  tabela.xlsx
searching-exercise/src/: app_search.cpp  searching.cpp  timing_template.cpp
searching-exercise/test/: run_tests.cpp
sorting-algorithms/: CMakeLists.txt
sorting-algorithms/include/: sorting.h
sorting-algorithms/src/: app_search.cpp  sorting.cpp
trees/tree/src/avl/tree/: AVLTree.java  MainAVLTree.java  Node.java
trees/tree/src/binary/search/tree/: BinaryTree.java  MainBinaryTree.java
